# rules_nodejs_with_purescript

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  package-lock.json  package.json
bar/: BUILD.bazel  Bar.purs
baz/: BUILD.bazel  Baz.purs
foo/: BUILD.bazel
