load(
    "@npm//purescript-psa:index.bzl",
    "psa",
)

filegroup(
    name = "sources",
    srcs = [
        "Foo.purs",
    ],
    visibility = [
        "//:__subpackages__",
    ],
)

psa(
    name = "output",
    args = [
        "--purs=$(execpath //:node_modules/.bin/purs)",
        "$(execpaths :sources)",
    ],
    data = [
        "//:node_modules/.bin/purs",
        ":sources",
    ],
    output_dir = True,
)
